--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,32 @@
     <title>Get Fit {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-      <header class="container-fluid fixed-top"></header>
+    <header>
+       <div class="container">
+           <div class="row justify-content-center">
+               <div class="col-4">
+                   <h2 class="text-center"><a href="{ url 'home' }">GET FIT</a></h2>
+               </div>
+           </div>
+           <div class="row justify-content-center">
+            <div class="col-4">
+                <ul class="list-inline text-center">
+                    {% if request.user.is_authenticated %}
+                        {% if request.user.is_superuser %}
+                            <li class="list-inline-item"><a href="">Program Management</a></li>
+                        {% endif %}
+                        <li class="list-inline-item"><a href="">My Profile</a></li>
+                        <li class="list-inline-item"><a href="">Programs</a></li>
+                        <li class="list-inline-item"><a href="{% url 'account_logout' %}">Logout</a></li>
+                    {% else %}
+                        <li class="list-inline-item"><a href="{% url 'account_signup' %}">Join Us</a></li>
+                        <li class="list-inline-item"><a href="{% url 'account_login' %}">Login</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+       </div>
+    </header>
 
       {% block page_header %}
       {% endblock %}
