--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,4 +5,12 @@
 {% endblock %}
 
 {% block content %}
+<div class="container-fluid home-bg">
+    <div class="row h-100">
+        <div class="col-4 col-lg-4 align-self-center">
+            <h1 class="text-white justify-content-center">Sign up here to access our fitness programs</h1><br>
+            <button type="button" class="btn btn-light text-black"><a class="text-black" href="{% url 'account_signup' %}">Signup!</a></button>
+        </div>
+    </div>
+</div>
 {% endblock %}
