--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     
     {% block corecss %}
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+       <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_corecss %}
@@ -30,11 +31,10 @@
     <title>Get Fit {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header>
-       <div class="container">
-           <div class="row justify-content-center">
-               <div class="col-4">
-                   <h2 class="text-center"><a href="{ url 'home' }">GET FIT</a></h2>
+    <header class="container-fluid">
+           <div class="row justify-content-center bg-light">
+               <div class="col-12 col-lg-4">
+                   <a href="{ url 'home' }" class="nav-link main-logo-link"><h1 class="text-center logo-font">Get Fit</h1></a>
                </div>
            </div>
            <div class="row justify-content-center">
@@ -42,19 +42,18 @@
                 <ul class="list-inline text-center">
                     {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
-                            <li class="list-inline-item"><a href="">Program Management</a></li>
+                            <li class="list-inline-item"><a class="nav-link" href="">Program Management</a></li>
                         {% endif %}
-                        <li class="list-inline-item"><a href="">My Profile</a></li>
-                        <li class="list-inline-item"><a href="">Programs</a></li>
-                        <li class="list-inline-item"><a href="{% url 'account_logout' %}">Logout</a></li>
+                        <li class="list-inline-item"><a class="nav-link" href="">My Profile</a></li>
+                        <li class="list-inline-item"><a class="nav-link" href="">Programs</a></li>
+                        <li class="list-inline-item"><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li>
                     {% else %}
-                        <li class="list-inline-item"><a href="{% url 'account_signup' %}">Join Us</a></li>
-                        <li class="list-inline-item"><a href="{% url 'account_login' %}">Login</a></li>
+                        <li class="list-inline-item"><a class="nav-link" href="{% url 'account_signup' %}">Join Us</a></li>
+                        <li class="list-inline-item"><a class="nav-link" href="{% url 'account_login' %}">Login</a></li>
                     {% endif %}
                 </ul>
             </div>
         </div>
-       </div>
     </header>
 
       {% block page_header %}
