Created Program s app and model

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,8 +7,8 @@
 {% block content %}
 <div class="container-fluid home-bg">
     <div class="row h-100">
-        <div class="col-4 col-lg-4 align-self-center">
-            <h1 class="text-white justify-content-center">Sign up here to access our fitness programs</h1><br>
+        <div class="col-4 offset-1 align-self-center">
+            <h1 class="text-white">Sign up here to access our fitness programs</h1><br>
             <button type="button" class="btn btn-light text-black"><a class="text-black" href="{% url 'account_signup' %}">Signup!</a></button>
         </div>
     </div>
