--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     <header class="container-fluid">
            <div class="row justify-content-center bg-light">
                <div class="col-12 col-lg-4">
-                   <a href="{ url 'home' }" class="nav-link main-logo-link"><h1 class="text-center logo-font">Get Fit</h1></a>
+                   <a href="{% url 'home' %}" class="nav-link main-logo-link"><h1 class="text-center logo-font">Get Fit</h1></a>
                </div>
            </div>
            <div class="row justify-content-center">
