Added img_url field to models, added program card

--- a/programs/templates/programs/programs.html
+++ b/programs/templates/programs/programs.html
@@ -11,11 +11,25 @@
     
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col">
-            {{ programs }}
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-lg-3 col-sm-12 text-center">
+                <h2>Our Programs</h2>
+            </div>
+        </div>
+        <div class="row">
+            {% for program in programs %}
+                <div class="col-lg-6">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
-</div>
 {% endblock %}
