--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,9 @@
                         {% if request.user.is_superuser %}
                             <li class="list-inline-item"><a class="nav-link" href="">Program Management</a></li>
                         {% endif %}
-                        <li class="list-inline-item"><a class="nav-link" href="">My Profile</a></li>
-                        <li class="list-inline-item"><a class="nav-link" href="">Programs</a></li>
-                        <li class="list-inline-item"><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li>
+                        <li class="list-inline-item text-center"><a class="nav-link" href="">My Profile</a></li>
+                        <li class="list-inline-item text-center"><a class="nav-link" href="{% url 'programs' %}">Programs</a></li>
+                        <li class="list-inline-item text-center"><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li>
                     {% else %}
                         <li class="list-inline-item"><a class="nav-link" href="{% url 'account_signup' %}">Join Us</a></li>
                         <li class="list-inline-item"><a class="nav-link" href="{% url 'account_login' %}">Login</a></li>
