--- a/templates/base.html
+++ b/templates/base.html
@@ -38,11 +38,11 @@
                </div>
            </div>
            <div class="row justify-content-center">
-            <div class="col-4">
+            <div class="col-6">
                 <ul class="list-inline text-center">
                     {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
-                            <li class="list-inline-item"><a class="nav-link" href="">Program Management</a></li>
+                            <li class="list-inline-item text-center"><a class="nav-link" href="">Program Management</a></li>
                         {% endif %}
                         <li class="list-inline-item text-center"><a class="nav-link" href="">My Profile</a></li>
                         <li class="list-inline-item text-center"><a class="nav-link" href="{% url 'programs' %}">Programs</a></li>
