Added insight field to program model

--- a/programs/templates/programs/programs.html
+++ b/programs/templates/programs/programs.html
@@ -15,7 +15,7 @@
                         <img src="{{ program.image.url }}" class="card-img-top" alt="Basic Program">
                         <div class="card-body">
                           <h5 class="card-title">{{ program.name }}</h5>
-                          <p class="card-text">{{ program.description }}</p>
+                          <p class="card-text">{{ program.insight }}</p>
                           <p class="card-text">Price: {{ program.price }}</p>
                           <a href="#" class="btn btn-primary">Buy</a>
                         </div>
