--- a/programs/templates/programs/program_info.html
+++ b/programs/templates/programs/program_info.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-6">
+            <div class="col-sm-10 col-md-8">
                 <img src="{{ program.image.url }}" alt="" style="width: 100%;">
             </div>
         </div>
