--- a/programs/templates/programs/programs.html
+++ b/programs/templates/programs/programs.html
@@ -12,7 +12,7 @@
             {% for program in programs %}
                 <div class="col-lg-4" style="padding-bottom: 1rem;">
                     <div class="card" style="width: 100%;">
-                        <img src="{{ program.image.url }}" class="card-img-top" alt="Basic Program">
+                        <img src="{{ program.image.url }}" class="card-img-top" alt="{{ program.name }}">
                         <div class="card-body">
                           <h5 class="card-title">{{ program.name }}</h5>
                           <p class="card-text">{{ program.insight }}</p>
