--- a/programs/templates/programs/programs.html
+++ b/programs/templates/programs/programs.html
@@ -17,7 +17,7 @@
                           <h5 class="card-title">{{ program.name }}</h5>
                           <p class="card-text">{{ program.insight }}</p>
                           <p class="card-text">Price: {{ program.price }}</p>
-                          <a href="#" class="btn btn-primary">Buy</a>
+                          <a href="{% url 'checkout' program.id %}" class="btn btn-primary">Buy</a>
                         </div>
                       </div>
                 </div>
