--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <div class="row justify-content-center">
@@ -22,11 +26,17 @@
                         {{ order_form.postcode | as_crispy_field }}
                         {{ order_form.country | as_crispy_field }}
                     </fieldset>
+                    <fieldset class="">
+                        <legend class="">Payment</legend>
+                        <div class="" id="card-element"></div>
+
+                        <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                    </fieldset>
 
                     <div class="row justify-content-end">
                         <div class="col-lg-5 col-sm-8 align-self-end">
                             <button type="button" class="btn btn-dark"><a href="{% url 'programs' %}">Cancel</a></button>
-                            <button type="button" id="submit-button" class="btn btn-dark">Complete Order</button>
+                            <button type="button" id="checkout-button" class="btn btn-dark">Complete Order</button>
                         </div>
                     </div>
                     <div class="row justify-content-end">
@@ -38,4 +48,11 @@
             </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
