--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -10,6 +10,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-8 col-md-10 col-sm-12">
                 <h3>Please complete your order to access the program</h3>
+                <form method="POST" id="payment-form">
                     {% csrf_token %}
                     <fieldset class="">
                         <legend class="">Contact Info</legend>
@@ -36,16 +37,16 @@
                     <div class="row justify-content-end">
                         <div class="col-lg-5 col-sm-8 align-self-end">
                             <button type="button" class="btn btn-dark"><a href="{% url 'programs' %}">Cancel</a></button>
-                            <button type="button" id="checkout-button" class="btn btn-dark">Complete Order</button>
+                            <button type="button" id="submit-button" class="btn btn-dark">Complete Order</button>
                         </div>
                     </div>
                     <div class="row justify-content-end">
                         <div class="col-lg-5 col-sm-8 align-self-end">
-                            <span>Total amount charged <strong>${{ program.price }}</strong></span>
+                            <span>Total amount charged <strong>${{ total }}</strong></span>
                         </div>
                     </div>
                 </form>
-            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
