--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,16 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container header-container">
-    <div class="overlay"></div>
+<div class="container">
     <div class="row">
         <div class="col-12 col-md-6">
-            <div class="allauth-form-inner-content">
-                {% block inner_content %}
-                {% endblock %}
-            </div>
+            {% block inner_content %}
+            {% endblock %}
         </div>
     </div>
-</div>
-
+</div>    
 {% endblock %}
