--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,8 +8,13 @@
 <div class="container-fluid home-bg">
     <div class="row h-100">
         <div class="col-4 offset-1 align-self-center">
+            {% if request.user.is_authenticated %}
+            <h1 class="text-white">Welcome to GET FIT</h1><br>
+            <button type="button" class="btn btn-light text-black"><a class="text-black" href="">My Programs</a></button>
+            {% else %}
             <h1 class="text-white">Sign up here to access our fitness programs</h1><br>
             <button type="button" class="btn btn-light text-black"><a class="text-black" href="{% url 'account_signup' %}">Signup!</a></button>
+            {% endif %}
         </div>
     </div>
 </div>
