--- a/static/css/base.css
+++ b/static/css/base.css
@@ -54,3 +54,20 @@ a {
 .wh {
     color: red
 }
+
+.allauth-form-inner-content input {
+  box-sizing: border-box;
+  height: 40px;
+  padding: 10px 12px;
+  border: 1px solid #000;
+  border-radius: 0px;
+  background-color: white;
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
+}
+
+.allauth-form-inner-content input::placeholder {
+    color: #aab7c4;
+}
+
