--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -4,9 +4,11 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-md-6">
-            {% block inner_content %}
-            {% endblock %}
+            <div class="allauth-form-inner-content">
+                {% block inner_content %}
+                {% endblock %}
+            </div>
         </div>
     </div>
-</div>    
+</div>
 {% endblock %}
