--- a/programs/templates/programs/my_programs.html
+++ b/programs/templates/programs/my_programs.html
@@ -10,6 +10,7 @@
         </div>
         <div class="row">
             {% for order in orders %}
+            {% if order.program_id %}
                 <div class="col-lg-4" style="padding-bottom: 1rem;">
                     <div class="card" style="width: 100%;">
                         <img src="{{ order.program_id.image.url }}" class="card-img-top" alt="{{ order.program_id.name }}">
@@ -21,6 +22,19 @@
                         </div>
                       </div>
                 </div>
+            {% else %}
+                <div class="col-lg-4" style="padding-bottom: 1rem;">
+                    <div class="card" style="width: 100%;">
+                        <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="Program deleted">
+                        <div class="card-body">
+                          <h5 class="card-title"></h5>
+                          <p class="card-text"></p>
+                          <p class="card-text">Paid</p>
+                          <a href="" class="btn btn-primary">program deleted</a>
+                        </div>
+                      </div>
+                </div>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
