--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -18,7 +18,8 @@
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                <button type="submit" class="btn btn-dark">Update Information</button>
+                <a href="{% url 'profile' %}" class="btn btn-dark">Cancel</a>
             </form>
         </div>
         <div class="col-12 col-lg-6">
