--- a/programs/templates/programs/edit_program.html
+++ b/programs/templates/programs/edit_program.html
@@ -12,6 +12,7 @@
                 {{ form | crispy }}
                 <div class="submit-button">
                     <button type="submit" class="btn btn-dark"><span>Update Porgram</span></button>
+                    <a href="{% url 'program_info' program.id %}" class="btn btn-dark">Cancel</a>
                 </div>
             </form>
         </div>
