--- a/programs/templates/programs/my_programs.html
+++ b/programs/templates/programs/my_programs.html
@@ -12,7 +12,7 @@
             {% for order in orders %}
             {% if order.program_id %}
                 <div class="col-lg-4" style="padding-bottom: 1rem;">
-                    <div class="card" style="width: 100%;">
+                    <div class="card h-100" style="width: 100%;">
                         <img src="{{ order.program_id.image.url }}" class="card-img-top" alt="{{ order.program_id.name }}">
                         <div class="card-body">
                           <h5 class="card-title">{{ order.program_id.name }}</h5>
@@ -23,17 +23,7 @@
                       </div>
                 </div>
             {% else %}
-                <div class="col-lg-4" style="padding-bottom: 1rem;">
-                    <div class="card" style="width: 100%;">
-                        <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="Program deleted">
-                        <div class="card-body">
-                          <h5 class="card-title"></h5>
-                          <p class="card-text"></p>
-                          <p class="card-text">Paid</p>
-                          <a href="" class="btn btn-primary">program deleted</a>
-                        </div>
-                      </div>
-                </div>
+                
             {% endif %}
             {% endfor %}
         </div>
