--- a/programs/templates/programs/program_info.html
+++ b/programs/templates/programs/program_info.html
@@ -60,7 +60,7 @@
                   </table>
                   {% if request.user.is_superuser %}
                     <a href="{% url 'edit_program' program.id %}">Edit</a> | 
-                    <a class="text-danger" href="{% url 'delete_program' program.id %}" onclick="return confirm('Are you sure you want to delete this review?');">Delete</a>
+                    <a class="text-danger" href="{% url 'delete_program' program.id %}" onclick="return confirm('Are you sure you want to delete this program?');">Delete</a>
                   {% endif %}
             </div>
         </div>
