Alterd programs view to filter programs and added profile photo to models

--- a/programs/templates/programs/my_programs.html
+++ b/programs/templates/programs/my_programs.html
@@ -18,7 +18,7 @@
                           <h5 class="card-title">{{ order.program_id.name }}</h5>
                           <p class="card-text">{{ order.program_id.insight }}</p>
                           <p class="card-text">Paid</p>
-                          <a href="{% url 'program_info' order.program_id.id %}" class="btn btn-primary">Go to program</a>
+                          <a href="{% url 'program_info' order.program_id.id %}" class="btn btn-dark">Go to program</a>
                         </div>
                       </div>
                 </div>
