--- a/programs/templates/programs/program_info.html
+++ b/programs/templates/programs/program_info.html
@@ -34,7 +34,7 @@
                       </tr>
                       <tr>
                         <th scope="row">Day 2</th>
-                        <td>{{ program.day_one }}</td>
+                        <td>{{ program.day_two }}</td>
                       </tr>
                       <tr>
                         <th scope="row">Day 3</th>
