--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -17,7 +17,7 @@
             {% if profile.profile_photo %}
             <img class="profile-photo align-self-center" height="300" width="300" src="{{ profile.profile_photo.url }}" alt="Profile Photo">
             {% else %}
-            <img class="profile-photo align-self-center" height="300" width="300" src="/media/noimage.png" alt="Profile Photo">
+            <img class="profile-photo align-self-center" height="300" width="300" src="https://www.pacificfoodmachinery.com.au/media/catalog/product/placeholder/default/no-product-image-400x400.png" alt="Profile Photo">
             {% endif %}
         </div>
     </div>
