added test cases and read me content

--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -6,9 +6,12 @@
 
 .profile-photo {
     border-radius: 50%;
+    align-items: center;
+    justify-content: center;
 }
 
-.padding {
+.profile {
     padding-top: 4rem;
     padding-bottom: 2rem;
 }
+
